--- a/index.html
+++ b/index.html
@@ -28,11 +28,18 @@
     </select>
 
     <select class="chapters" name="Spec Chapters" id="specchapters">
-        <option value="1">Go to Chapter</option>
-        <option value="20">Didn't</option>
-        <option value="37">Get</option>
-        <option value="99">This</option>
-        <option value="102">Far</option>
+      <option value="1">Go to Chapter</option>
+      <option value="9">Chapter 1: Mathematical Induction</option>
+      <option value="19">Chapter 2: Real Polynomials</option>
+      <option value="55">Chapter 3: Functions</option>
+      <option value="83">Chapter 4: Complex Numbers</option>
+      <option value="111">Chapter 5: Vectors</option>
+      <option value="141">Chapter 6: Vector Applications</option>
+      <option value="191">Chapter 7: Integration</option>
+      <option value="227">Chapter 8: Rates of Change and Differential Equations</option>
+      <option value="271">Chapter 9: Vector Calculus</option>
+      <option value="301">Answers</option>
+      <option value="335">Index</option>
     </select>
 
     <div class="right-buttons">
@@ -64,7 +71,7 @@
       </div>
       <div class="input-container">
         <label for="page-number">Page: </label>
-        <input type="number" id="page-number" value="1" name="page-number" min="1" max="500" />
+        <input type="number" id="page-number" value="6" name="page-number" min="1" max="500" />
       </div>
       <div class="two-buttons">
         <div class="button-container">
