--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </select>
 
     <div class="right-buttons">
-      <button id="download-button">Download</button>
+      <button onclick="window.open('https://schoolssaedu-my.sharepoint.com/:f:/g/personal/josh_newman429_schools_sa_edu_au/ElgFiy8E5JtDrxOJCTgMMrcBTZK90SeGkn2ftlHbzKAbxA?e=HO3dwF', '_blank')" id="download-button">Download</button>
     </div>
   </header>
 
