only load current index page + changed button arrow

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       </div>
       <div class="two-buttons">
         <div class="button-container">
-          <button class="centre-button" id="page-down-button">▼</button>
+          <button class="centre-button" id="page-down-button">◀︎</button>
         </div>
       <div class="button-container">
-        <button class="centre-button" id="page-up-button">▲</button>
+        <button class="centre-button" id="page-up-button">▶︎</button>
       </div>
     </div>
     </div>
